(library
 (name coqsimpleio_extraction)
 (public_name coq-simple-io.extraction)
 (synopsis "Support library for compiling OCaml modules extracted from Coq")
 (wrapped false)
 (modules
    uint63 ; source from coq-core.kernel
 ))

(rule
 (targets uint63.ml)
 (deps (:gen-file uint63_%{ocaml-config:int_size}.ml))
 (action (copy# %{gen-file} %{targets})))
