(library
 (name coqsimpleio_plugin)
 (public_name coq-simple-io.plugin)
 (flags :standard -rectypes -warn-error -3 -w -8-27+40)
 (modules Coqsimpleio IOLib Compat)
 (libraries unix
   (select void_for_linking-plugin-extraction from
    (coq-core.plugins.extraction -> void_for_linking-plugin-extraction.empty)
    (coq.plugins.extraction -> void_for_linking-plugin-extraction.empty))
   (select void_for_linking-config from
    (coq-core.config -> void_for_linking-config.empty)
    (coq.config -> void_for_linking-config.empty))))

(coq.pp (modules coqsimpleio))

(rule (action (write-file void_for_linking-plugin-extraction.empty "")))
(rule (action (write-file void_for_linking-config.empty "")))

(rule
  (alias compat)
  (target compat.ml)
  (action (run %{exe:../scripts/mycppo} %{dep:compat.ml.cppo} %{target})))
