(coq.extraction
 (prelude main)
 (extracted_modules Datatypes ExtrOcamlIntConv Nat
                    IO_Monad IO_RawChar IO_Stdlib IO_Sys IO_Bytes IO_Exceptions IO_Filename IO_Float IO_Random IO_String IO_Unix IO_UnsafeNat
                    main)
 (theories SimpleIO))

(test
 (name main)
 (libraries unix)
 (flags :standard -w -33-39-67))

(rule
 (alias runtest)
 (action (diff main.expected main.output)))
